# Intel_project

./: CMakeLists.txt  README.md
include/: AreaIntrusionDetection.hpp  Context.hpp  Drawer.hpp  ExtendedTracker.h  Kalman.hpp  LineCrossesAndAreaIntrusionDetection.hpp  LineCrossingDetection.hpp  ObjectDetector.hpp  ObjectTracker.hpp  ReidDescriptor.hpp  ReidNetwork.hpp  detector.hpp  reid_network.h  reid_network.hpp
media/: out12.avi
models/: pedestrian-detection-adas-0002.xml  person-detection-0201.xml  person-reidentification-retail-0286.xml  person-reidentification-retail-0288.xml  person-vehicle-bike-detection-2000.xml  person-vehicle-bike-detection-2001.xml  person-vehicle-bike-detection-2002.xml  person-vehicle-bike-detection-crossroad-1016.xml
models/detector/person-detection-0200/FP16/: person-detection-0200.xml
models/detector/person-detection-0200/FP16-INT8/: person-detection-0200.xml
models/detector/person-detection-0200/FP32/: person-detection-0200.xml
models/detector/person-detection-0201/FP16/: person-detection-0201.xml
models/detector/person-detection-0201/FP16-INT8/: person-detection-0201.xml
models/detector/person-detection-0201/FP32/: person-detection-0201.xml
models/detector/person-detection-0203/FP16/: person-detection-0203.xml
models/detector/person-detection-0203/FP16-INT8/: person-detection-0203.xml
models/detector/person-detection-0203/FP32/: person-detection-0203.xml
models/reid/person-reidentification-retail-0076/FP16/: person-reidentification-retail-0076.xml
models/reid/person-reidentification-retail-0076/FP32/: person-reidentification-retail-0076.xml
models/reid/person-reidentification-retail-0079/FP16/: person-reidentification-retail-0079.xml
models/reid/person-reidentification-retail-0079/FP32/: person-reidentification-retail-0079.xml
src/: AreaIntrusionDetection.cpp  Context.cpp  Drawer.cpp  ExtendedTracker.cpp  LineCrossesAndAreaIntrusionDetection.cpp  LineCrossingDetection.cpp  ObjectDetector.cpp  ObjectTracker.cpp  ReidDescriptor.cpp  ReidNetwork.cpp  detector.cpp  main.cpp  reid_network.cpp
tmp/: main1.cpp
